# lite

./: .gitignore  CMakeLists.txt  README.md  build_new.sh  build_new_m1.sh  main.lua
data/core/: command.lua  init.lua  rootview.lua
data/core/commands/: command.lua
lua/src/: lua  luac
src/: main.c  renderer.c
src/api/: api.c  system.c
